(feature): add dals and some refactoring

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,40 @@
+alembic
+annotated-types
+anyio
+asyncpg
+bcrypt
+certifi
+charset-normalizer
+click
+fastapi
+greenlet
 grpcio
 grpcio-tools
-fastapi 
-python-multipart 
-uvicorn
-requests
-pydantic
-sqlalchemy[asyncio]
-alembic
-pydantic-settings
-asyncpg
+h11
+idna
+Mako
+markdown-it-py
+MarkupSafe
+mdurl
+passlib
 pendulum
+protobuf
+pydantic
+pydantic-settings
+pydantic_core
+Pygments
+python-dateutil
+python-dotenv
+python-multipart
+requests
+rich
+setuptools
+six
+sniffio
+SQLAlchemy
+starlette
+typing_extensions
+tzdata
+urllib3
+uvicorn
+pydantic[email]
