(feature): Add extratypeDecorator and grpc models for proto

--- a/alembic.ini
+++ b/alembic.ini
@@ -80,7 +80,7 @@ file_template = %%(year)d-%%(month).2d-%%(day).2d_%%(slug)s
 # ruff.options = --fix REVISION_SCRIPT_FILENAME
 
 # Logging configuration
-[loggers]
+[_loggers]
 keys = root,sqlalchemy,alembic
 
 [handlers]
@@ -89,17 +89,17 @@ keys = console
 [formatters]
 keys = generic
 
-[logger_root]
+[_logger_root]
 level = WARN
 handlers = console
 qualname =
 
-[logger_sqlalchemy]
+[_logger_sqlalchemy]
 level = WARN
 handlers =
 qualname = sqlalchemy.engine
 
-[logger_alembic]
+[_logger_alembic]
 level = INFO
 handlers =
 qualname = alembic
