--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ alembic = "^1.13.1"
 pydantic-settings = "^2.2.1"
 asyncpg = "^0.29.0"
 pendulum = "^3.0.0"
-rich = "^13.7.1"
 passlib = "^1.7.4"
 bcrypt = "^4.1.2"
 annotated-types = "^0.6.0"
@@ -46,6 +45,8 @@ starlette = "^0.37.2"
 typing-extensions = "^4.11.0"
 tzdata = "^2024.1"
 urllib3 = "^2.2.1"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+loguru = "^0.7.2"
 
 
 [build-system]
