--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ tzdata = "^2024.1"
 urllib3 = "^2.2.1"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 loguru = "^0.7.2"
+ruff = "^0.4.6"
 
 
 [build-system]
